--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -104,50 +104,90 @@
 }
 
 .nav{
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-color: $color-gold;
-    z-index: 1000;
-
-    display: grid;
-    grid-template-columns: 10rem 1fr 10rem;
-    grid-template-rows: 1fr min-content 1fr;
-
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    @include respond(tab-port){
+        display: block;
+        visibility: visible;
+        opacity: 1;
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        background-color: $color-gold;
+        z-index: 1000;
+     
+        display: grid;
+        grid-template-columns: 10rem 1fr 10rem;
+        grid-template-rows: 1fr min-content 1fr;
+    
+        font-family: 'Roboto', sans-serif;
+        font-weight: 600;
+    }
     
     &__links{
-        grid-column: 2 / 3;
-        grid-row: 1 / 3;
-        align-self: center;
-        margin-top: 30rem;
+        display: none;
+        visibility: hidden;
+        opacity: 0;
+
+        @include respond(tab-port){
+            display: block;
+            visibility: visible;
+            opacity: 1;
+            grid-column: 2 / 3;
+            grid-row: 1 / 3;
+            align-self: center;
+            margin-top: 30rem;
+            display: grid;
+            grid-template-rows: repeat(4, min-content);
+            grid-row-gap: 5rem;
+            justify-items: stretch;
+            align-items: center;
+        }
 
         @include respond(phone){
             margin-top: 20rem;
         }
 
-        display: grid;
-        grid-template-rows: repeat(4, min-content);
-        grid-row-gap: 5rem;
-        justify-items: stretch;
-        align-items: center;
     }
     &__link{
-        color: #fff;
+        color:  $color-primary;
         text-decoration: none;
-        font-size: 7rem;
-        border-bottom: 3px solid #fff;
+        color:  $color-primary;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        text-transform: uppercase;
+        cursor: pointer;
+        &:hover{
+            color: rgba($color-primary, .5);
+        }
+        @include respond(tab-port){
+            display: block;
+            visibility: visible;
+            opacity: 1;
+            color: #fff;
+            text-decoration: none;
+            font-size: 7rem;
+            border-bottom: 3px solid #fff;
+        }
         @include respond(phone){
             font-size: 6rem;
         }
     }
     &__close{
-        grid-column: 3 / 4;
-        grid-row: 1 / 2;
-        justify-self: flex-end;
-        font-size: 7rem;
-        margin: 4rem;
-        color: #fff;
+        display: none;
+        visibility: hidden;
+        opacity: 0;
+        @include respond(tab-port){
+            display: block;
+            visibility: visible;
+            opacity: 1;
+            grid-column: 3 / 4;
+            grid-row: 1 / 2;
+            justify-self: flex-end;
+            font-size: 7rem;
+            margin: 4rem 8rem;
+            color: #fff;
+        }
     } 
 }
